# ssl_streaming_system

./: .gitignore  .gitmodules  Dockerfile  Dockerfile.viz  GameEvent.csv  README.md  compile_proto.bash  config_audio.yaml  config_orchestrator.yaml  config_priority.yaml  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
audio_playback/: Dockerfile  __main__.py  audio_playback.py
common/: config_loader.py  data_models.py
config/: config_audio.yaml  config_orchestrator.yaml  config_priority.yaml
dummy_sender/: Dockerfile  dummy_sender.py
orchestrator/: Dockerfile  __main__.py  event_listener.py  orchestrator.py  protobuf_event_handlers.py
placement_visualizer/: index.html  serve.py  start_viz.sh  zmq_websocket_bridge.py
